# wassimovie-wasm-bindings

./: .gitignore  Cargo.toml
src/: indexed_db.rs  lib.rs  movie_similarity.rs  text_vector.rs  user_profile.rs
