[package]
name = "wassimovie-wasm-bindings"
version = "0.1.0"
authors = ["Sacha Dupuydauby"]
edition = "2021"

[dependencies]
hora = "0.1.1"
rand = "0.8.5"
rand_distr = "0.4.3"
getrandom = { version = "0.2.9", features = ["js"] }
wasm-bindgen = "0.2.86"
serde = { version = "1.0.163", features = ["serde_derive"] }
serde_json = "1.0.96"
indexmap = { version = "1.9.3", features = ["serde"] }
uuid = { version = "1.3.3", features = ["serde", "wasm-bindgen", "fast-rng"] }
indexed_db_futures = "0.3.0"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen-futures = "0.4.36"
web-sys = { version = "0.3.63", features = ["console"] }

[lib]
crate-type = ["cdylib"]
